# starlette-testclient

./: .cruft.json  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: main.yml
search/: search_index.json
starlette_testclient/: __init__.py  _testclient.py  testclient.py
tests/: conftest.py  test_applications.py  test_background.py  test_formparsers.py  test_responses.py  test_smoke.py  test_testclient.py
